<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="title">MyCal</string>
    <string name="content"> </string>
    <string name="button1">0</string>
    <string name="button2">.</string>
    <string name="button3">+</string>
    <string name="button4">=</string>
    <string name="button5">1</string>
    <string name="button6">2</string>
    <string name="button7">3</string>
    <string name="button8">-</string>
    <string name="button9">4</string>
    <string name="button10">5</string>
    <string name="button11">6</string>
    <string name="button12">*</string>
    <string name="button13">7</string>
    <string name="button14">8</string>
    <string name="button15">9</string>
    <string name="button16">/</string>


</resources>
